// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`"compressionOptions" option matches snapshot for custom options ({Object}): assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "related": {
        "gzipped": "09a1a1112c577c2794359715edfcb5ac.png.gz",
      },
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "09a1a1112c577c2794359715edfcb5ac.png.gz",
    73507,
    {
      "compressed": true,
      "immutable": true,
      "size": 73507,
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    390,
    {
      "compressed": true,
      "immutable": true,
      "size": 390,
    },
  ],
  [
    "async.async.55e6e9a872bcc7d4b226.js",
    194,
    {
      "chunkhash": "55e6e9a872bcc7d4b226",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "async.async.55e6e9a872bcc7d4b226.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "async.async.55e6e9a872bcc7d4b226.js.gz",
    136,
    {
      "compressed": true,
      "immutable": true,
      "size": 136,
    },
  ],
  [
    "main.4d75ca3dcb0ac1fb976b.js",
    16252,
    {
      "chunkhash": "4d75ca3dcb0ac1fb976b",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "main.4d75ca3dcb0ac1fb976b.js.gz",
      },
      "size": 16252,
    },
  ],
  [
    "main.4d75ca3dcb0ac1fb976b.js.gz",
    4097,
    {
      "compressed": true,
      "immutable": true,
      "size": 4097,
    },
  ],
]
`;

exports[`"compressionOptions" option matches snapshot for custom options ({Object}): errors 1`] = `[]`;

exports[`"compressionOptions" option matches snapshot for custom options ({Object}): warnings 1`] = `[]`;

exports[`"compressionOptions" option matches snapshot without values: assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "related": {
        "gzipped": "09a1a1112c577c2794359715edfcb5ac.png.gz",
      },
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "09a1a1112c577c2794359715edfcb5ac.png.gz",
    73507,
    {
      "compressed": true,
      "immutable": true,
      "size": 73507,
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    390,
    {
      "compressed": true,
      "immutable": true,
      "size": 390,
    },
  ],
  [
    "async.async.55e6e9a872bcc7d4b226.js",
    194,
    {
      "chunkhash": "55e6e9a872bcc7d4b226",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "async.async.55e6e9a872bcc7d4b226.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "async.async.55e6e9a872bcc7d4b226.js.gz",
    136,
    {
      "compressed": true,
      "immutable": true,
      "size": 136,
    },
  ],
  [
    "main.4d75ca3dcb0ac1fb976b.js",
    16252,
    {
      "chunkhash": "4d75ca3dcb0ac1fb976b",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "main.4d75ca3dcb0ac1fb976b.js.gz",
      },
      "size": 16252,
    },
  ],
  [
    "main.4d75ca3dcb0ac1fb976b.js.gz",
    4097,
    {
      "compressed": true,
      "immutable": true,
      "size": 4097,
    },
  ],
]
`;

exports[`"compressionOptions" option matches snapshot without values: errors 1`] = `[]`;

exports[`"compressionOptions" option matches snapshot without values: warnings 1`] = `[]`;

exports[`"compressionOptions" option set default compression level to maximum for brotli: assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "brotliCompressed": "23fc1d3ac606d117e05a140e0de79806.svg.br",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.br",
    363,
    {
      "compressed": true,
      "immutable": true,
      "size": 363,
    },
  ],
  [
    "async.async.55e6e9a872bcc7d4b226.js",
    194,
    {
      "chunkhash": "55e6e9a872bcc7d4b226",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "brotliCompressed": "async.async.55e6e9a872bcc7d4b226.js.br",
      },
      "size": 194,
    },
  ],
  [
    "async.async.55e6e9a872bcc7d4b226.js.br",
    123,
    {
      "compressed": true,
      "immutable": true,
      "size": 123,
    },
  ],
  [
    "main.4d75ca3dcb0ac1fb976b.js",
    16252,
    {
      "chunkhash": "4d75ca3dcb0ac1fb976b",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "brotliCompressed": "main.4d75ca3dcb0ac1fb976b.js.br",
      },
      "size": 16252,
    },
  ],
  [
    "main.4d75ca3dcb0ac1fb976b.js.br",
    3578,
    {
      "compressed": true,
      "immutable": true,
      "size": 3578,
    },
  ],
]
`;

exports[`"compressionOptions" option set default compression level to maximum for brotli: errors 1`] = `[]`;

exports[`"compressionOptions" option set default compression level to maximum for brotli: warnings 1`] = `[]`;

exports[`"compressionOptions" option set default compression level to maximum for deflate: assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "deflateed": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    378,
    {
      "compressed": true,
      "immutable": true,
      "size": 378,
    },
  ],
  [
    "async.async.55e6e9a872bcc7d4b226.js",
    194,
    {
      "chunkhash": "55e6e9a872bcc7d4b226",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "deflateed": "async.async.55e6e9a872bcc7d4b226.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "async.async.55e6e9a872bcc7d4b226.js.gz",
    124,
    {
      "compressed": true,
      "immutable": true,
      "size": 124,
    },
  ],
  [
    "main.4d75ca3dcb0ac1fb976b.js",
    16252,
    {
      "chunkhash": "4d75ca3dcb0ac1fb976b",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "deflateed": "main.4d75ca3dcb0ac1fb976b.js.gz",
      },
      "size": 16252,
    },
  ],
  [
    "main.4d75ca3dcb0ac1fb976b.js.gz",
    4085,
    {
      "compressed": true,
      "immutable": true,
      "size": 4085,
    },
  ],
]
`;

exports[`"compressionOptions" option set default compression level to maximum for deflate: errors 1`] = `[]`;

exports[`"compressionOptions" option set default compression level to maximum for deflate: warnings 1`] = `[]`;

exports[`"compressionOptions" option set default compression level to maximum for deflateRaw: assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "deflateRawed": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    372,
    {
      "compressed": true,
      "immutable": true,
      "size": 372,
    },
  ],
  [
    "async.async.55e6e9a872bcc7d4b226.js",
    194,
    {
      "chunkhash": "55e6e9a872bcc7d4b226",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "deflateRawed": "async.async.55e6e9a872bcc7d4b226.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "async.async.55e6e9a872bcc7d4b226.js.gz",
    118,
    {
      "compressed": true,
      "immutable": true,
      "size": 118,
    },
  ],
  [
    "main.4d75ca3dcb0ac1fb976b.js",
    16252,
    {
      "chunkhash": "4d75ca3dcb0ac1fb976b",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "deflateRawed": "main.4d75ca3dcb0ac1fb976b.js.gz",
      },
      "size": 16252,
    },
  ],
  [
    "main.4d75ca3dcb0ac1fb976b.js.gz",
    4079,
    {
      "compressed": true,
      "immutable": true,
      "size": 4079,
    },
  ],
]
`;

exports[`"compressionOptions" option set default compression level to maximum for deflateRaw: errors 1`] = `[]`;

exports[`"compressionOptions" option set default compression level to maximum for deflateRaw: warnings 1`] = `[]`;

exports[`"compressionOptions" option set default compression level to maximum for gzip: assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    390,
    {
      "compressed": true,
      "immutable": true,
      "size": 390,
    },
  ],
  [
    "async.async.55e6e9a872bcc7d4b226.js",
    194,
    {
      "chunkhash": "55e6e9a872bcc7d4b226",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "async.async.55e6e9a872bcc7d4b226.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "async.async.55e6e9a872bcc7d4b226.js.gz",
    136,
    {
      "compressed": true,
      "immutable": true,
      "size": 136,
    },
  ],
  [
    "main.4d75ca3dcb0ac1fb976b.js",
    16252,
    {
      "chunkhash": "4d75ca3dcb0ac1fb976b",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "main.4d75ca3dcb0ac1fb976b.js.gz",
      },
      "size": 16252,
    },
  ],
  [
    "main.4d75ca3dcb0ac1fb976b.js.gz",
    4097,
    {
      "compressed": true,
      "immutable": true,
      "size": 4097,
    },
  ],
]
`;

exports[`"compressionOptions" option set default compression level to maximum for gzip: errors 1`] = `[]`;

exports[`"compressionOptions" option set default compression level to maximum for gzip: warnings 1`] = `[]`;
